# tpr-pseudo-rando-bug-plando

./: README.md  pyproject.toml
src/tprbugplando/: __init__.py  __main__.py  items.py  rungen.py
