[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tpr-pseudo-rando-bug-plando"
authors = [
    {name = "Willow Ciesialka", email = "wciesialka@gmail.com"},
]
description = "Generate a Twilight Princess bug run plando!"
requires-python = ">=3.10"
keywords=["randomizer","game","random"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities"
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "tprbugplando.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.scripts]
tprbugplando = "tprbugplando:__main__.main"